hide overflow + minor fixes

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     --mosaic-blue: #176b7f;
 }
 
+body {
+    overflow: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -60,7 +64,6 @@ input:invalid {
 }
 
 .container section {
-    /* border: 1px solid black; */
     height: 100vh;
 }
 
@@ -91,7 +94,7 @@ input:invalid {
     --banner-width: 500px;
 }
 
-#signup-banner img {
+#signup-banner>img {
     height: 100%;
     width: var(--banner-width);
     object-fit: cover;
@@ -106,7 +109,7 @@ input:invalid {
 }
 
 #banner-top {
-    top: 10%;
+    top: 18%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
